--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "@shopify/flash-list": "^1.7.2",
+    "@tanstack/react-query": "^5.60.2",
     "expo": "~52.0.3",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.2",
